Exibição de Imagens e Avaliações

--- a/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
+++ b/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
@@ -4,6 +4,7 @@
 }
 <head>
     <link href="@Url.Content("/css/agendar.css")" rel="stylesheet" />
+    <link rel="preload" href="@Url.Content("/img/site/hero-banner.jpg")">
 </head>
 
 <div class="agendar">
