--- a/Aplicacao_Interativa/Views/Cliente/Avaliar.cshtml
+++ b/Aplicacao_Interativa/Views/Cliente/Avaliar.cshtml
@@ -5,6 +5,7 @@
 
 <head>
     <link href="@Url.Content("/css/avaliar.css")" rel="stylesheet" />
+    <link rel="preload" href="@Url.Content("/img/site/hero-banner.jpg")">
 </head>
 
 
