--- a/Aplicacao_Interativa/Views/Cliente/Index.cshtml
+++ b/Aplicacao_Interativa/Views/Cliente/Index.cshtml
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Rubik:wght@300,400;700&display=swap"
           rel="stylesheet">
     <link href="@Url.Content("/css/flaticon.min.css")" rel="stylesheet" />
-    <link rel="preload" href="@Url.Content("/img/hero-banner.jpg")">
+    <link rel="preload" href="@Url.Content("/img/site/hero-banner.jpg")">
 </head>
 
 
@@ -24,7 +24,7 @@
         -->
 
         <section class="section hero has-before has-bg-image" id="home" aria-label="home"
-                 style="background-image: url('/img/hero-banner.jpg')">
+                 style="background-image: url('/img/site/hero-banner.jpg')">
             <div class="container">
 
                 <h1 class="h1 hero-title2">Seu visual </h1>
@@ -209,7 +209,7 @@
         -->
 
         <section class="section pricing has-bg-image has-before" id="pricing" aria-label="pricing"
-                 style="background-image: url('/img/pricing-bg.jpg')">
+                 style="background-image: url('/img/site/pricing-bg.jpg')">
             <div class="container">
 
                 <h2 class="h2 section-title text-center">Planos & KITS</h2>
