--- a/Aplicacao_Interativa/wwwroot/css/agendar.css
+++ b/Aplicacao_Interativa/wwwroot/css/agendar.css
@@ -1,6 +1,6 @@
 ﻿body {
     font-family: Arial, sans-serif;
-    background-image: url('/img/hero-banner.jpg');
+    background-image: url('../img/site/hero-banner.jpg');
 }
 
 
