--- a/Aplicacao_Interativa/Views/Barbeiro/Index.cshtml
+++ b/Aplicacao_Interativa/Views/Barbeiro/Index.cshtml
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Rubik:wght@300,400;700&display=swap"
           rel="stylesheet">
     <link href="@Url.Content("/css/flaticon.min.css")" rel="stylesheet" />
-    <link rel="preload" href="@Url.Content("/img/hero-banner.jpg")">
+    <link rel="preload" href="@Url.Content("/img/site/hero-banner.jpg")">
 </head>
 
 
@@ -23,7 +23,7 @@
         -->
 
         <section class="section hero has-before has-bg-image" id="home" aria-label="home"
-                 style="background-image: url('/img/hero-banner.jpg')">
+                 style="background-image: url('/img/site/hero-banner.jpg')">
             <div class="container">
 
                 <h1 class="h1 hero-title2">Seu visual </h1>
