--- a/Aplicacao_Interativa/Views/Cadastro/Criar.cshtml
+++ b/Aplicacao_Interativa/Views/Cadastro/Criar.cshtml
@@ -12,7 +12,7 @@
     href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Rubik:wght@300,400;700&display=swap"
     rel="stylesheet">
     <link href="@Url.Content("/css/flaticon.min.css")" rel="stylesheet"/>
-    <link rel="preload" href="@Url.Content("/img/hero-banner.jpg")">
+    <link rel="preload" href="@Url.Content("/img/site/hero-banner.jpg")">
 </head>
 
 <main>
@@ -23,7 +23,7 @@
       -->
 
       <section class="section hero has-before has-bg-image" id="home" aria-label="home"
-        style="background-image: url('/img/hero-banner.jpg')">
+        style="background-image: url('/img/site/hero-banner.jpg')">
         <div class="formlogin">
 
           <div class="container">
