--- a/Aplicacao_Interativa/Views/Login/Index.cshtml
+++ b/Aplicacao_Interativa/Views/Login/Index.cshtml
@@ -22,7 +22,7 @@
       -->
 
       <section class="section hero has-before has-bg-image" id="home" aria-label="home"
-        style="background-image: url('/img/hero-banner.jpg')">
+        style="background-image: url('/img/site/hero-banner.jpg')">
         <div class="formlogin">
 
           <div class="container">
