--- a/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
+++ b/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
@@ -41,6 +41,30 @@
                             <option value="@item.Text">@item.Text</option>
                         }
                     </select>
+                    <iframe name="hiddenFrame" style="display: none;"></iframe>
+
+                    <div class="form-group">
+                        <div class="row">
+                            @foreach (var produtos in ViewBag.Produtos)
+                            {
+                                <div class="col-sm-4">
+                                    <form asp-action="ArmazenarProdutoId" method="post" target="hiddenFrame">
+                                        <input type="hidden" name="ProdutoId" value="@produtos.Id" />
+                                        <button type="submit" class="card" style="width: 18rem;">
+                                            <label for="barbeiro">Produtos adicionais:</label>
+                                            <img src="..." class="card-img-top" alt="...">
+                                            <div class="card-body">
+                                                <p class="card-text">@produtos.Nome</p>
+                                                <p class="card-text">@produtos.Preco</p>
+                                                <p class="card-text">@produtos.Descricao</p>
+                                            </div>
+                                        </button>
+                                    </form>
+                                </div>
+                            }
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="d-flex justify-content-between align-items-center mt-3">
