Inclusão de Produtos

--- a/Aplicacao_Interativa/Views/Barbeiro/Index.cshtml
+++ b/Aplicacao_Interativa/Views/Barbeiro/Index.cshtml
@@ -54,6 +54,7 @@
                                 <th>Serviço</th>
                                 <th>Data</th>
                                 <th>Horário</th>
+                                <th>Produtos</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -64,6 +65,7 @@
                                     <td>@agendamento.NomeServico</td>
                                     <td>@agendamento.DataAgendamento.ToShortDateString()</td>
                                     <td>@agendamento.Horario</td>
+                                    <td>@agendamento.Produto</td>
                                 </tr>
                             }
                         </tbody>
