--- a/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
+++ b/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
@@ -41,22 +41,23 @@
                             <option value="@item.Text">@item.Text</option>
                         }
                     </select>
-                    <iframe name="hiddenFrame" style="display: none;"></iframe>
 
                     <div class="form-group">
                         <div class="row">
-                            @foreach (var produtos in ViewBag.Produtos)
+                            <label for="barbeiro">Produtos adicionais</label>
+                            @foreach (var produto in ViewBag.Produtos)
                             {
-                                <div class="col-sm-4">
+                                <div class="col-sm-4 mb-4">
                                     <form asp-action="ArmazenarProdutoId" method="post" target="hiddenFrame">
-                                        <input type="hidden" name="ProdutoId" value="@produtos.Id" />
-                                        <button type="submit" class="card" style="width: 18rem;">
-                                            <label for="barbeiro">Produtos adicionais:</label>
-                                            <img src="..." class="card-img-top" alt="...">
+                                        <input type="hidden" name="ProdutoId" value="@produto.Id" />
+                                        <button type="submit" class="card produto-button" style="width: 18rem;"
+                                                data-nome="@produto.Nome" data-preco="@produto.Preco"
+                                                data-descricao="@produto.Descricao" data-imagem="@Url.Content(produto.CaminhoDaImagem)">
+                                            <img src="@Url.Content(produto.CaminhoDaImagem)" width="90" height="90" alt="@produto.Nome" class="img-cover">
                                             <div class="card-body">
-                                                <p class="card-text">@produtos.Nome</p>
-                                                <p class="card-text">@produtos.Preco</p>
-                                                <p class="card-text">@produtos.Descricao</p>
+                                                <p class="card-text">@produto.Nome</p>
+                                                <p class="card-text">R$ @produto.Preco</p>
+                                                <p class="card-text">@produto.Descricao</p>
                                             </div>
                                         </button>
                                     </form>
@@ -65,6 +66,13 @@
                         </div>
                     </div>
 
+                    <!-- Formulário para enviar os IDs dos produtos selecionados -->
+                    <form id="produtoForm" method="post" target="hiddenFrame">
+                        <input type="hidden" name="ProdutoIds" id="ProdutoIds" />
+                    </form>
+
+                    <!-- Hidden iframe to handle form submission without page reload -->
+                    <iframe name="hiddenFrame" style="display:none;"></iframe>
                 </div>
 
                 <div class="d-flex justify-content-between align-items-center mt-3">
