Implementação do Controle de Estoque

--- a/Aplicacao_Interativa/Views/Shared/Components/Menu/Default.cshtml
+++ b/Aplicacao_Interativa/Views/Shared/Components/Menu/Default.cshtml
@@ -31,6 +31,10 @@
                 <a href="#agendamentos" class="navbar-link" data-nav-link>Agendamentos</a>
             </li>
 
+            <li class="navbar-item"> 
+                <a class="navbar-link" asp-controller="Barbeiro" asp-action="Produto">Cadastrar Produto</a>
+            </li>
+
             <li class="navbar-item">
                 <a class="navbar-link" asp-controller="Cadastro" asp-action="Criar">Cadastrar</a>
             </li>
